# TuiMusic

./: .clang-format  .clangd  .gersemirc  .gitignore  CMakeLists.txt  readme.md
binary/linux/: libftxui-component.so.5.0.0  libftxui-screen.so.5.0.0
make/: build.mk  files.mk  flags.mk  main.mk  platform.mk  utility.mk
program/include/: application.hpp  input.hpp  interface.hpp  main.hpp  player.hpp  system.hpp  utility.hpp
program/source/: application.cpp  input.cpp  interface.cpp  main.cpp  player.cpp  system.cpp  utility.cpp
script/: build.sh  clean.sh  debug.sh  run.bat  run.sh
